# Focus

./: .commitmsg.txt  .env.example  .gitignore  ANALYSIS.md  Cargo.toml  README.md  RELEASE_NOTES.md  docker-compose.yml
.github/workflows/: ci-cd.yml  desktop-release.yml  jitsi-fork-ci.yml  mobile-android.yml  mobile-ios.yml  stage-jitsi-branding-regression.yml  stage-load-profiles.yml  stage-oidc-e2e.yml  stage-smoke.yml
API_Go/: .dockerignore  .golangci.yml  Dockerfile  Dockerfile.runtime  go.mod  go.sum
API_Go/docs/: openapi.yaml
desktop/: package-lock.json  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
docs/: API.md  Architecture.md  Bots.md  Branding.md  Competitive_Analysis.md  Corp_Resources_SSO_Catalog.md  DataFlow.md  Database.md  Documentation_Changelog.md  Exchange_OnPrem_EWS.md  Frontend.md  GoLive_Checklist.md  HLD.md  Infrastructure.md  Integration.md  Jitsi_Branding_Regression.md  LLD.md  LessonsLearned.md  Load_Testing_Target_Profiles.md  Mobile_Build_Android.md  Mobile_Build_iOS.md  NetworkTopology.md  OnCall_Runbook.md  Push_Notifications.md  RBAC_ABAC_Review.md  README.md  Retrospective.md  Roadmap.md  Roadmap_v2.md  Roadmap_v3.md  Runbook_RolloutRollback.md  Search.md  Security.md  Security_Findings_Triage.md  Security_Review_Auth_WS_Webhooks.md  Swagger.md  UAT_Pilot_Protocol.md  Webhooks.md  branding-manifest.json
frontend/: .dockerignore  .env.example  .env.production  Dockerfile.kaniko  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend-admin/: .env.example  .env.production  .gitignore  Dockerfile.kaniko  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend-admin/src/: App.test.ts  App.tsx  index.css  main.tsx
frontend/src/: App.tsx  index.css  main.tsx  sw-push.ts  tauri.d.ts  vite-env.d.ts
jitsi-meet-master/: README.md
k8s/: README.md  exchange-kerberos-example.yaml  go-builder-pod.yaml  hpa-api.yaml  hpa-frontend.yaml  hpa-jvb.yaml  kaniko-api-job.yaml  kaniko-api.yaml  kaniko-jobs.yaml  np-builder-egress.yaml  np-egress-keycloak.yaml  production.yaml  prometheus-rules.yaml  servicemonitor-api.yaml  uploads-pvc.yaml
k8s/argocd/: application.yaml  (+1 more)
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/capabilities/: default.json
mobile/src-tauri/src/: commands.rs  lib.rs  main.rs
pics/: hdphoto1.wdp
scripts/: dev-up.ps1  rotate-k8s-secrets.ps1  update-roadmap.ps1
tests/: smoke-test.sh
(+228 files in other folders)
